fix: about-us-area spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10166,7 +10166,7 @@ ul.children {
   }
 }
 .about-us-area.style-1 .about-image-card {
-  padding-right: 150px;
+  padding-right: 144px;
 }
 .about-us-area.style-1 .about-image-card .main-img {
   margin-left: 48px;
